# nextlog

./: .gitignore  NEXTLOG_PLANNING.md  README.md  nextlog.example.json  pyproject.toml  smaug.config.example.json
.github/workflows/: test.yml
inbox/: .gitkeep
inbox/processed/: sample-bookmark.md
inbox/raw/: sample-bookmark.md
nextlog/: __init__.py  __main__.py  cli.py  config.py  fetcher.py  processor.py  search.py  synthesizer.py
src/: cli.js  config.js  processor.js
synthesis/ai/: 2026-04-08-ai.md
synthesis/productivity/: 2026-04-08-productivity.md
synthesis/tools/: 2026-04-08-tools.md
